tests/positive/InstanceImport/M.juvix
module M;

trait
type T A :=
  mkT@{
    pp : A → A;
  };

type Unit := unit;

instance
unitI : T Unit := mkT λ{x := x};
